2007-04-27  Nicola Pero <nicola.pero@meta-innovation.com>

	* PCProject.m ([-execToolName]): Fixed typo where 'ExecuToolName'
	had been typed instead of 'ExecToolName'.
	* PCProjectLauncher.m ([-run:]): Add './' before the name when
	we're using openapp, so that we use 'openapp ./Gorm.app' but
	'opentool autogsdoc'.  This fixes running application/tool
	projects.
	
2007-03-06  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile: Set GNUSTEP_MAKEFILES using gnustep-config if not yet set.
	Do not set GNUSTEP_INSTALLATION_DOMAIN.
	* PCBundleManager.m ([-loadBundlesWithExtension:]): Rewritten to
	use the proper NSSearchPathForDirectoriesInDomains API so that it
	works with all filesystem layouts.  Also, load bundles from all
	ApplicationSupport/ProjectCenter locations, not just the System
	one.
	* Framework/PCPrefController.m (-setBundlePath:): Method removed.
	* Headers/ProjectCenter/PCPrefController.h: Same change.

	* PCFileManager.m ([-createDirectoriesIfNeededAtPath:]): Avoid
	infinite loop that would be triggered the first time you tried to
	build your project.
	
2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile.bundles (BUNDLE_INSTALL_DIR): Fixed definition basing
	it on GNUSTEP_APPS.

2007-02-14  Nicola Pero <nicola.pero@meta-innovation.com>
	
	* Modules/Projects/Application/PCAppProject.m: Do not set
	GNUSTEP_INSTALLATION_DIR in the GNUmakefile.  This would not work
	with the new filesystem support.  The GUI probably needs updating
	to make users aware of this.
	* Modules/Projects/Tool/PCToolProject.m: Same change.

2007-01-20 Sergii Stoian <stoyan255@gmail.com>

	* Modules/Editors/ProjectCenter/Resources/ObjC.syntax: Update.

2007-01-15 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m: Remove code handling rootBuildPath var.
	Remove rootBuildPath var.
	* Headers/ProjectCenter/PCProjectManager.h: Ditto.
	* Framework/PCFileManager.m: Add removeDirsIfEmpty:(BOOL) parameter to
	remove* methods.